--- a/features/templates/main.html
+++ b/features/templates/main.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
+    <title>AWS ALERTS</title>
     <!-- Custom CSS for this page -->
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #48f8fe;
+            background-color: #ffffff;
         }
 
         .container {
             max-width: 100%;
             margin: 20px auto;
-            background-color: #48f8fe;
+            background-color: #ffffff;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            /* border: 10px solid #000000; */
             display: flex;
-            
         }
-        .repobox{
+
+        .repobox {
             display: flex;
             justify-content: space-evenly;
             align-items: center;
             flex-wrap: wrap;
             gap: 4px;
             border-radius: 10px;
-
         }
+
         h1 {
             text-align: center;
             color: #000000;
@@ -41,10 +39,12 @@
         .user-details {
             margin-top: 20px;
         }
-        .user-profile-photo{
+
+        .user-profile-photo {
             max-width: 170px;
             border-radius: 75px 75px 75px 75px;
         }
+
         .user-details p {
             margin: 3px 0;
             font-size: 15px;
@@ -60,23 +60,21 @@
         .user-details p:last-child {
             margin-bottom: 0;
         }
-        
+
         .repository {
             max-width: 200%;
             background-color: rgb(255, 255, 255);
             border: 2px solid #615f5f;
-            /* border-radius: 8px; */
             margin-top: 10px;
             padding: 14px;
             position: relative;
             border-radius: 10px;
         }
-        .repobox :hover{
+
+        .repobox :hover {
             background-color: rgb(255, 255, 255);
             transform: scale(1.1);
             transition: transform .5s ease-in-out;
-            
-
         }
 
         .repository h2 {
@@ -92,9 +90,6 @@
             font-family: cursive;
         }
 
-
-        
-
         .repobox input[type="checkbox"] {
             display: none;
         }
@@ -106,10 +101,10 @@
         .repobox input[type="checkbox"]:checked ~ .repository {
             display: block;
         }
+
         .repobox:nth-child(n+6) {
             display: none;
         }
-
 
         .aws_container {
             display: flex;
@@ -117,6 +112,7 @@
             gap: 20px;
             margin-left: 20px;
         }
+
         .aws_block {
             margin-left: 20px;
             background-color: #f0f0f0;
@@ -124,79 +120,70 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 300px; /* Fixed width */
-            height: 300px; /* Fixed height */
-            overflow-y: auto; /* Enable vertical scrolling */
+            width: 300px;
+            height: 300px;
+            overflow-y: auto;
         }
+
         .aws_block h2 {
             margin-top: 0;
         }
+
         .aws_block p {
             margin: 5px 0;
         }
-
-
-
     </style>
 </head>
 <body>
-    <div class="container">
-        
-        <h1>User Profile</h1>
-        <div class="user-details">
-            <img class="user-profile-photo" src="{{user_data.profile.avatar_url}}" alt="">
-            <p><strong>Name:</strong> {{ user_data.user.name }}</p>
-            <p><strong>Username:</strong> {{ user_data.user.githubusername }}</p>
-            <p><strong>Bio:</strong> {% if user_data.profile.bio %} {{ user_data.profile.bio }} {% else %} N/A {% endif %}</p>
-            <p><strong>Location:</strong> {% if user_data.profile.location %} {{ user_data.profile.location }} {% else %} N/A {% endif %}</p>
-            <!-- <p><strong>Join Date:</strong> {{ user_data.profile.join_date }}</p> -->
-            <p><strong>Followers:</strong> {{ user_data.profile.followers }}</p>
-            <p><strong>Following:</strong> {{ user_data.profile.following }}</p>
-            <p><strong>Public Repositories:</strong> {{ user_data.profile.public_repositories }}</p> 
-            <!-- Include other user details here -->
-             
+<div class="container">
+    <!-- <h1>User Profile</h1> -->
+    <div class="user-details">
+        <img class="user-profile-photo" src="{{user_data.profile.avatar_url}}" alt="">
+        <p><strong>Name:</strong> {{ user_data.user.name }}</p>
+        <p><strong>Username:</strong> {{ user_data.user.githubusername }}</p>
+        <p><strong>Bio:</strong> {% if user_data.profile.bio %} {{ user_data.profile.bio }} {% else %} N/A {% endif %}</p>
+        <p><strong>Location:</strong> {% if user_data.profile.location %} {{ user_data.profile.location }} {% else %} N/A {% endif %}</p>
+        <p><strong>Followers:</strong> {{ user_data.profile.followers }}</p>
+        <p><strong>Following:</strong> {{ user_data.profile.following }}</p>
+        <p><strong>Public Repositories:</strong> {{ user_data.profile.public_repositories }}</p>
+    </div>
 
-        </div>
-
-        <div class="repobox">
-            {% for repo in user_data.repositories %}
-
-            <a href="https://github.com/{{ user_data.user.githubusername }}/{{ repo.name }}" target="_blank" class="repository-link">
-
-                <div class="repository"   >
-                    <h4>{{ repo.name }}</h4>
-                    <p><strong>Language:</strong> {% if repo.language %} {{ repo.language }} {% else %} N/A {% endif %}</p>
-                    <!-- <p><strong>Stars:</strong> {{ repo.stars }}</p> -->
-                    <p><strong>Watchers Count:</strong> {{ repo.watchers_count }}</p>
-                    <p><strong>Open Issues Count:</strong> {{ repo.open_issues_count }}</p>
-                    <p><strong>Created At:</strong> {{ repo.created_at }}</p>
-                    <p><strong>Updated At:</strong> {{ repo.updated_at }}</p>
-                    <!-- <p><strong>Pushed At:</strong> {{ repo.pushed_at }}</p> -->
-                    <!-- <p><strong>URL:</strong> <a href="{{ repo.url }}" target="_blank">{{ repo.url }}</a></p> -->
-                </div>
-            </a>
-    
-
+    <div class="repobox">
+        {% for repo in user_data.repositories %}
+        <a href="https://github.com/{{ user_data.user.githubusername }}/{{ repo.name }}" target="_blank"
+           class="repository-link">
+            <div class="repository">
+                <h4>{{ repo.name }}</h4>
+                <p><strong>Language:</strong> {% if repo.language %} {{ repo.language }} {% else %} N/A {% endif %}</p>
+                <p><strong>Watchers Count:</strong> {{ repo.watchers_count }}</p>
+                <p><strong>Open Issues Count:</strong> {{ repo.open_issues_count }}</p>
+                <p><strong>Created At:</strong> {{ repo.created_at }}</p>
+                <p><strong>Updated At:</strong> {{ repo.updated_at }}</p>
+            </div>
+        </a>
         {% endfor %}
-        
     </div>
-    
-    </div>
-    <div class="aws_container">
-        <div class="aws_block">
-            <h2>Instances</h2>
+</div>
+
+<h1>AWS Resources</h1>
+<div class="aws_container">
+    <div class="aws_block">
+        <h2>Instances</h2>
+        {% if user_data.ec2_instances %}
             {% for instance in user_data.ec2_instances %}
-                <b><p>Name: {{ instance.Name }}</p></b>
-                <p>State: {{ instance.State }}</p>
-                <p>Type: {{ instance.Type }}</p>
+            <b><p>Name: {{ instance.Name }}</p></b>
+            <p>State: {{ instance.State }}</p>
+            <p>Type: {{ instance.Type }}</p>
             {% endfor %}
             <form action="{{ url_for('main_routes.main_page') }}" method="post">
                 <input type="hidden" name="block_name" value="ec2_instances">
                 <button type="submit" name="send_email" value="true">Send Email</button>
             </form>
-        </div>
-        <div class="aws_block">
-            <h2>S3 Buckets</h2>
+        {% endif %}
+    </div>
+    <div class="aws_block">
+        <h2>S3 Buckets</h2>
+        {% if user_data.s3_buckets %}
             {% for bucket in user_data.s3_buckets %}
                 <b><p>Name: {{ bucket['Bucket Name'] }}</p></b>
                 <p>Creation Date{{bucket['Creation Date']}}</p>
@@ -205,44 +192,52 @@
                 <input type="hidden" name="block_name" value="s3_buckets">
                 <button type="submit" name="send_email" value="true">Send Email</button>
             </form>
-        </div>
-        <div class="aws_block">
-            <h2>EBS Volumes</h2>
-            {% for volume in user_data.ebs_volumes %}
-               <b><p>Name: {{ volume['Volume ID'] }}</p></b>
-                <p>Type: {{ volume.Type }}</p>
-                <p>Size (GB): {{ volume['Size (GB)'] }}</p>
-                <p>State: {{ volume.State }}</p>
-            {% endfor %}
-            <form action="{{ url_for('main_routes.main_page') }}" method="post">
-                <input type="hidden" name="block_name" value="ebs_volumes">
-                <button type="submit" name="send_email" value="true">Send Email</button>
-            </form>
-        </div>
-        <div class="aws_block">
-            <h2>EKS Clusters</h2>
-            <div class="cluster_info">
-                {% if user_data.eks_clusters %}
-                    <ul>
-                        {% for cluster in user_data.eks_clusters %}
-                            <li>
-                                <p><strong>Name:</strong> {{ cluster['Cluster Name'] }}</p>
-                                <p><strong>Status:</strong> {{ cluster['Status'] }}</p>
-                                <p><strong>Version:</strong> {{ cluster['Version'] }}</p>
-                                <p><strong>Creation Time:</strong> {{ cluster['Creation Time'] }}</p>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    <p>No EKS clusters found.</p>
-                {% endif %}
-            </div>
+        {% else %}
+            <p>No S3 buckets found.</p>
+        {% endif %}
+    </div>
+    <div class="aws_block">
+        <h2>EBS Volumes</h2>
+        {% if user_data.ebs_volumes %}
+        {% for volume in user_data.ebs_volumes %}
+            <b><p>Name: {{ volume['Volume ID'] }}</p></b>
+            <p>Type: {{ volume.Type }}</p>
+            <p>Size (GB): {{ volume['Size (GB)'] }}</p>
+            <p>State: {{ volume.State }}</p>
+        {% endfor %}
+        <form action="{{ url_for('main_routes.main_page') }}" method="post">
+            <input type="hidden" name="block_name" value="ebs_volumes">
+            <button type="submit" name="send_email" value="true">Send Email</button>
+        </form>
+        {% else %}
+            <p>No EBS volumes found.</p>
+        {% endif %}
+    </div>
+    <div class="aws_block">
+        <h2>EKS Clusters</h2>
+        <div class="cluster_info">
+            {% if user_data.eks_clusters %}
+            <ul>
+                {% for cluster in user_data.eks_clusters %}
+                    <li>
+                        <p><strong>Name:</strong> {{ cluster['Cluster Name'] }}</p>
+                        <p><strong>Status:</strong> {{ cluster['Status'] }}</p>
+                        <p><strong>Version:</strong> {{ cluster['Version'] }}</p>
+                        <p><strong>Creation Time:</strong> {{ cluster['Creation Time'] }}</p>
+                    </li>
+                {% endfor %}
+            </ul>
             <form action="{{ url_for('main_routes.main_page') }}" method="post">
                 <input type="hidden" name="block_name" value="eks_clusters">
                 <button type="submit" name="send_email" value="true">Send Email</button>
             </form>
+        {% else %}
+            <p>No EKS clusters found.</p>
+        {% endif %}
         </div>
     </div>
-    
+</div>
+
+
 </body>
 </html>
