--- a/features/static/css/login.css
+++ b/features/static/css/login.css
@@ -8,8 +8,13 @@
 
 section
 {
-	background-color: #48f8fe;
-	opacity: 1;
+	background: #092756;
+	background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
+	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), linear-gradient(135deg,  #670d10 0%,#092756 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );	opacity: 1;
 	position: relative;
 	min-height: 100vh;
 	display: flex;
@@ -28,7 +33,7 @@ section .user .formBx
 	position: relative;	
 	width: 150%;
 	height: 100%;
-	background: #fff;
+	background: #ffffff;
 	padding: 40px;
 	box-shadow: 10px 10px 8px;
 }
@@ -40,9 +45,13 @@ section .user .formBx form h2
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	text-align: center;
-	width: 100%;
+	width: 119%;
+	height: 70px;
+	padding-top: 25px;
 	margin-bottom: 10px;
-	color: #555;
+	margin-left: -40px;
+	margin-top: -50px;
+	color: #000000;
 }
 
 section  .user .formBx form input
@@ -50,8 +59,8 @@ section  .user .formBx form input
 	position: relative; 
 	width: 100%;
 	padding: 10px;
-	background: #f5f5f5;
-	color: #333;
+	background: #e4e4e4;
+	color: #000000;
 	border: none;
 	outline: none;
 	box-shadow: none;
@@ -79,11 +88,13 @@ section .user .formBx form .signup
 	margin-top: 20px;
 	font-size: 12px;
 	letter-spacing: 1px;
-	color: #555;
+	color: #1d1d1d;
 	text-transform: uppercase;
 	font-weight: 300;
 }
-
+section .user .formBx form .signup a {
+	color:#1d1d1d
+}
 @media(max-width: 991px)
 {
 	section 
