--- a/features/static/css/stylesheet.css
+++ b/features/static/css/stylesheet.css
@@ -10,8 +10,14 @@ section
 {
 	/* background: radial-gradient(#ffffff 20%, transparent 21% ,transparent 79%, #ffffff 80%);
 	background-size: 11em 11em; */
-	background-color: #48f8fe;
-	opacity: 1;
+	background: #092756;
+	background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
+	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), linear-gradient(135deg,  #670d10 0%,#092756 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );	opacity: 1;
+		opacity: 1;
 	position: relative;
 	min-height: 100vh;
 	display: flex;
@@ -28,7 +34,7 @@ section .user .formBx
 	position: relative;	
 	width: 60%;
 	height: 100%;
-	background: #fff;
+	background: #f8f8f8;
 	padding: 40px;
 	box-shadow: 10px 10px 8px;
 }
@@ -41,22 +47,22 @@ section .user .formBx form h2
 	text-align: center;
 	width: 100%;
 	margin-bottom: 10px;
-	color: #555;
+	color: #000000;
 }
 section  .user .formBx form input
 {
 	position: relative; 
 	width: 100%;
 	padding: 10px;
-	background: #f5f5f5;
-	color: #333;
+	background: #dddddd;
+	color: #000000;
 	border: none;
 	outline: none;
 	box-shadow: none;
 	margin: 8px 0; 
 	font-size: 14px;
 	letter-spacing: 1px;
-	font-weight: 300; 
+	font-weight: 300;
 }
 section .user .formBx form input[type="submit"]
 {
@@ -75,9 +81,13 @@ section .user .formBx form .signup
 	margin-top: 20px;
 	font-size: 12px;
 	letter-spacing: 1px;
-	color: #555;
+	color: #353535;
 	text-transform: uppercase;
 	font-weight: 300;
+}
+
+section .user .formBx form .signup a{
+	color: #353535;
 }
 
 
