--- a/features/templates/main.html
+++ b/features/templates/main.html
@@ -10,18 +10,25 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff;
-        }
+            background: #092756;
+	background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%), -moz-linear-gradient(-45deg,  #670d10 0%, #092756 100%);
+	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -webkit-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -o-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), -ms-linear-gradient(-45deg,  #670d10 0%,#092756 100%);
+	background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom,  rgba(57,173,219,.25) 0%,rgba(42,60,87,.4) 100%), linear-gradient(135deg,  #670d10 0%,#092756 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );	opacity: 1;
+		opacity: 1;        }
 
         .container {
             max-width: 100%;
             margin: 20px auto;
-            background-color: #ffffff;
+            background-color: #48f8fe00;
             padding: 20px;
             border-radius: 8px;
             display: flex;
+            color: #000000;
         }
-
+        
         .repobox {
             display: flex;
             justify-content: space-evenly;
@@ -33,11 +40,12 @@
 
         h1 {
             text-align: center;
-            color: #000000;
+            color: #ffffff;
         }
 
         .user-details {
             margin-top: 20px;
+            color: #ffffff;
         }
 
         .user-profile-photo {
@@ -48,7 +56,7 @@
         .user-details p {
             margin: 3px 0;
             font-size: 15px;
-            color: #000000;
+            color: #ffffff;
             font-family: cursive;
         }
 
@@ -63,17 +71,23 @@
 
         .repository {
             max-width: 200%;
-            background-color: rgb(255, 255, 255);
-            border: 2px solid #615f5f;
+            /* background-color: rgb(255, 255, 255); */
+            /* border: 2px solid #615f5f; */
             margin-top: 10px;
-            padding: 14px;
+            margin-left: 10px;
+            /* padding: 14px; */
             position: relative;
-            border-radius: 10px;
+            background: #fafafa;
+            padding: 40px;
+            box-shadow: 5px 5px 4px #000000;
+            
+            
+            
         }
 
         .repobox :hover {
             background-color: rgb(255, 255, 255);
-            transform: scale(1.1);
+            transform: scale(1);
             transition: transform .5s ease-in-out;
         }
 
@@ -90,6 +104,9 @@
             font-family: cursive;
         }
 
+        .repository h4{
+            color: #000000;
+        }
         .repobox input[type="checkbox"] {
             display: none;
         }
@@ -111,18 +128,24 @@
             flex-wrap: wrap;
             gap: 20px;
             margin-left: 20px;
+            background-color: #ffffff00;
         }
 
         .aws_block {
             margin-left: 20px;
-            background-color: #f0f0f0;
-            border: 2px solid #615f5f;
+            margin-bottom: 50px;
+            /* background-color: #f0f0f0; */
+            /* border: 2px solid #615f5f; */
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            height: 300px;
+            /* border-radius: 10px; */
+            /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+            width: 250px;
+            height: 250px;
             overflow-y: auto;
+            background: #ffffff;
+            color: #000000;
+            padding: 40px;
+            box-shadow: 5px 5px 4px #000000;
         }
 
         .aws_block h2 {
@@ -131,6 +154,16 @@
 
         .aws_block p {
             margin: 5px 0;
+        }
+        button {
+            max-width: 80px;
+            background: #677eff;
+            color: #fff;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: 500;
+            letter-spacing: 1px;
+            transition: 0.5s;
         }
     </style>
 </head>
@@ -149,7 +182,7 @@
     </div>
 
     <div class="repobox">
-        {% for repo in user_data.repositories %}
+        {% for repo in user_data.repositories[:5] %}
         <a href="https://github.com/{{ user_data.user.githubusername }}/{{ repo.name }}" target="_blank"
            class="repository-link">
             <div class="repository">
